# gstore-rust

./: .gitignore  Cargo.toml  README.md  gnlqa.conf.example
docs/: CPP_PARITY.md  DESIGN.md  NLQA_DESIGN.md  REFACTOR_BACKLOG.md  STORAGE_BACKEND.md
gnlqa/: Cargo.toml  README.md
gnlqa/src/: analytics.rs  config.rs  embed.rs  error.rs  eval.rs  generate.rs  graphrag.rs  ground.rs  http_server.rs  intent.rs  kb.rs  lang.rs  lib.rs  link.rs  main.rs  mcp.rs  pipeline.rs  repair.rs  schema.rs  secret.rs  session.rs  solve.rs
gnlqa/src/llm/: anthropic.rs  mock.rs  mod.rs  openai.rs
src/: cluster.rs  concurrent.rs  error.rs  http_api.rs  http_client.rs  http_users.rs  lib.rs  rpc.rs  server.rs  sparql_results.rs
src/analytics/: mod.rs
src/backend/: mod.rs  rocks.rs
src/db/: mod.rs
src/dict/: mod.rs  prefix.rs
src/kvstore/: bptree.rs  disk_dict.rs  ivarray.rs  mod.rs  overflow.rs  pager.rs  store.rs  string_index.rs  vlist.rs
src/model/: id.rs  mod.rs  term.rs
src/parser/: mod.rs  nquads.rs  ntriples.rs  rdfxml.rs  trig.rs  turtle.rs
src/parser/sparql/: ast.rs  lexer.rs  mod.rs
src/query/: candidates.rs  engine.rs  functions.rs  hash.rs  mod.rs  optimizer.rs  planner.rs  results.rs  value.rs
src/reason/: mod.rs
src/signature/: disk_vstree.rs  mod.rs  vstree.rs
src/store/: mod.rs
testdata/lubm/: lubm_q1.rq  lubm_q10.rq  lubm_q11.rq  lubm_q12.rq  lubm_q13.rq  lubm_q14.rq  lubm_q2.rq  lubm_q3.rq  lubm_q4.rq  lubm_q5.rq  lubm_q6.rq  lubm_q7.rq  lubm_q8.rq  lubm_q9.rq
tests/: dt_admin.rs  dt_cli.rs  dt_disk.rs  dt_graph.rs  dt_http_parity.rs  dt_lubm.rs  dt_num.rs  dt_optimizer.rs  dt_parity.rs  dt_persist.rs  dt_reason.rs  dt_review_fixes.rs  dt_rocksdb.rs  dt_service.rs  dt_small.rs  dt_sparql11.rs  dt_update.rs
